force-app/main/default/objects/BMCServiceDesk__SS_Tile_Entitlement__c/BMCServiceDesk__SS_Tile_Entitlement__c.object-meta.xml
<CustomObject>
    <description>Stores required information about the Self Service Tile entitlement.</description>
    <label>SS Tile Entitlement</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>SSTile Entitlement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSTile Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>