force-app/main/default/objects/BMCServiceDesk__SS_Tile_Entitlement__c/fields/BMCServiceDesk__All_Accounts__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__All_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the tile is assigned to all the accounts then the value of this field will be set to True.</description>
    <label>All Accounts</label>
    <type>Checkbox</type>
</CustomField>