force-app/main/default/objects/BMCServiceDesk__SS_Tile_Entitlement__c/fields/BMCServiceDesk__Customsetting_tile_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Customsetting_tile_ID__c</fullName>
    <description>Stores the ID of the tile record saved in the custom settings.</description>
    <label>Custom setting tile ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>