force-app/main/default/objects/BMCServiceDesk__SS_Tile_Entitlement__c/fields/BMCServiceDesk__Profiles_Permissionsets__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Profiles_Permissionsets__c</fullName>
    <defaultValue>&apos;All&apos;</defaultValue>
    <description>This stores the comma-separated IDs of the Profiles or Permission sets.</description>
    <label>Profiles or Permission sets</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>